@@ -65,6 +65,9 @@ Trunk (unreleased changes)
 19. HADOOP-889.  Remove duplicate code from HDFS unit tests.
     (Milind Bhandarkar via cutting)
 
+20. HADOOP-943.  Improve HDFS's fsck command to display the filename
+    for under-replicated blocks.  (Dhruba Borthakur via cutting) 
+
 
 Branch 0.11 (unreleased)
 
